<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/common_background"
    tools:context=".Activities.SearchActivity">
    
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_marginTop="100dp"
        android:padding="20dp"
        android:textAppearance="@style/stay_with_us"
        android:text="@string/stay_with_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAppearance="@style/choose_city"
        android:text="@string/choose_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_city"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/choose_city"
            android:hint="@string/choose_city_hint"
            android:background="@drawable/register_ui_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textAppearance="@style/choose_city"
            android:text="@string/book_group_se"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_book_category"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/choose_city"
            android:hint="@string/book_group_hint"
            android:background="@drawable/register_ui_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Find Donors Button-->
        <Button
            android:id="@+id/find_donor_but"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/find_don"
            android:textAppearance="@style/registertex"
            android:background="@drawable/register_button" />
        <!--/Find Donors Button-->

    </LinearLayout>


</ScrollView>