<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_background"
    tools:context=".Activities.MakeRequestActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:padding="18dp"
            android:textAppearance="@style/heart_felt_txt"
            android:text="@string/heart_felt_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <FrameLayout
            android:layout_margin="10dp"
            android:background="@drawable/border_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/message"
            android:textAppearance="@style/make_req_msg"
            android:minLines="6"
            android:maxLines="20"
            android:padding="10dp"
            android:gravity="top"
            android:hint="@string/make_req_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        </FrameLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/post_image"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_image_search_24"
                android:layout_width="150dp"
                android:layout_height="150dp"/>

            <TextView
                android:id="@+id/choose_text"
                android:gravity="center"
                android:textAlignment="center"
                android:textAppearance="@style/choose_img"
                android:text="@string/choose_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


        </LinearLayout>

        <!--Choose Image Button-->
        <Button
            android:id="@+id/post_req_but"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/post_req"
            android:textAppearance="@style/logintex"
            android:background="@drawable/login_button" />
        <!--/Choose Image Button-->

    </LinearLayout>
</ScrollView>